--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,12 +1,13 @@
 workflows:
   windows-vps-full:
     name: Windows VPS Full CI
-    max_build_duration: 90        # tối đa 90 phút build
+    max_build_duration: 90
     environment:
       os: windows
       vars:
         PYTHON_VERSION: "3.12.7"
         SCRIPT_FILE: "my_script.py"
+
     scripts:
       - name: System info
         script: |
@@ -16,7 +17,7 @@ workflows:
           echo "Working dir: %CD%"
           echo "==========================="
 
-      - name: Cài đặt Python và các module cần thiết
+      - name: Cài đặt Python và module cần thiết
         script: |
           echo "=== CÀI ĐẶT PYTHON %PYTHON_VERSION% ==="
           choco install python --version=%PYTHON_VERSION% -y
@@ -25,7 +26,7 @@ workflows:
           pip install --upgrade pip
           pip install requests telebot colorama
 
-      - name: Clone hoặc pull repo phụ (nếu có)
+      - name: Kiểm tra hoặc cập nhật Git repo
         script: |
           echo "=== GIT CHECK ==="
           if exist .git (
@@ -34,7 +35,7 @@ workflows:
             echo "Không có repo Git để cập nhật."
           )
 
-      - name: Chạy Python script chính
+      - name: Chạy script Python chính
         script: |
           echo "=== BẮT ĐẦU CHẠY SCRIPT PYTHON ==="
           if exist %SCRIPT_FILE% (
@@ -45,7 +46,7 @@ workflows:
             echo "⚠️ Không tìm thấy %SCRIPT_FILE% trong thư mục gốc!"
           )
 
-      - name: Ghi log & tổng hợp kết quả
+      - name: Ghi log build
         script: |
           echo "=== GHI LOG ==="
           echo Build Time: %DATE% %TIME% > build_log.txt
@@ -53,21 +54,25 @@ workflows:
           echo System: %PROCESSOR_IDENTIFIER% >> build_log.txt
           echo Done >> build_log.txt
 
-      # Hook mở rộng – ví dụ gửi log lên Telegram
-      - name: (Tùy chọn) Gửi log về Telegram
+      - name: Gửi thông báo Telegram (tùy chọn)
         script: |
-          echo "=== GỬI LOG TELEGRAM (nếu muốn) ==="
+          echo "=== GỬI LOG TELEGRAM (nếu có biến môi trường) ==="
           if defined TELEGRAM_TOKEN (
             echo "Token tồn tại, gửi log..."
-            python - <<END
-import requests, os
+            python - <<EOF
+import os, requests
 token = os.getenv("8438130882:AAEmgOVt1Hc2nQbKMPWUV8l6PRPkBrYtTjM")
 chat_id = os.getenv("-1002693327446")
-msg = f"✅ Build trên Codemagic Windows đã xong!\nUser: {os.getenv('USERNAME')}"
-requests.post(f"https://api.telegram.org/bot{token}/sendMessage", json={"chat_id": chat_id, "text": msg})
-END
+msg = f"✅ Build trên Codemagic Windows đã hoàn tất!\nUser: {os.getenv('USERNAME')}\nBuild path: {os.getcwd()}"
+try:
+    r = requests.post(f"https://api.telegram.org/bot{token}/sendMessage",
+                      json={"chat_id": chat_id, "text": msg})
+    print("Đã gửi log Telegram thành công!", r.status_code)
+except Exception as e:
+    print("Lỗi khi gửi Telegram:", e)
+EOF
           ) else (
-            echo "Không có Telegram token, bỏ qua bước này."
+            echo "Không có TELEGRAM_TOKEN, bỏ qua bước này."
           )
 
       - name: Cleanup cuối
