--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
   windows-vps-full:
     name: Windows VPS Full CI
     max_build_duration: 90
-    instance_type: windows_medium
+    instance_type: windows_x2
 
     environment:
       vars:
