--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,42 +1,50 @@
-name: Keepalive 24/7 (90m cycle)
+workflows:
+  macos_vps_247:
+    name: "macOS M4 VPS Loop Runner"
+    max_build_duration: 720  # tối đa 12h/lần build, có thể tự động khởi động lại
+    instance_type: mac_mini_m4_pro  # máy M4 Pro mạnh
+    environment:
+      vars:
+        LOOP_FILE: "loop.py"
+        PERSIST_PATH: "/Users/builder/.persist_data"
+      xcode: latest
+      cocoapods: default
+      python: 3.12
+    triggering:
+      events:
+        - manual
+    scripts:
+      - name: 🧱 Chuẩn bị môi trường
+        script: |
+          echo "=== Chuẩn bị môi trường và thư mục lưu trữ ==="
+          mkdir -p $PERSIST_PATH
+          echo "Lưu data tại: $PERSIST_PATH"
 
-# Chạy theo 2 cron entries để cover mỗi 90 phút:
-on:
-  schedule:
-    - cron: '0 0,3,6,9,12,15,18,21 * * *'    # at 00:00,03:00,06:00,... (minute 0)
-    - cron: '30 1,4,7,10,13,16,19,22 * * *'  # at 01:30,04:30,07:30,...
-  workflow_dispatch: # cho phép kick tay (manual)
+      - name: 🐍 Tạo file loop Python (chạy nền 24/7)
+        script: |
+          cat > $LOOP_FILE <<'PYCODE'
+          import os, time, datetime, json
 
-jobs:
-  run-long-script:
-    runs-on: ubuntu-latest
-    timeout-minutes: 95        # bảo đảm job bị kill nếu vượt 95 phút
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+          DATA_PATH = os.environ.get("PERSIST_PATH", "/Users/builder/.persist_data")
+          LOG_FILE = os.path.join(DATA_PATH, "loop_log.json")
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.13.7"
+          print("🌀 VPS Loop Runner khởi động...")
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt || true
+          while True:
+              now = datetime.datetime.now().isoformat()
+              print(f"[{now}] Hệ thống hoạt động ổn định.")
+              
+              # Ghi log trạng thái mỗi 60 giây
+              with open(LOG_FILE, "a") as f:
+                  f.write(json.dumps({"time": now, "status": "running"}) + "\n")
 
-      - name: Run long script with timeout (~80 minutes)
-        # 'timeout' sẽ kill process sau 80 phút (80m). Điều chỉnh theo nhu cầu.
-        run: |
-          echo "Starting long-run job (max 80 minutes)..."
-          # nếu bạn dùng Windows-specific commands, thay runner hoặc dùng windows-latest
-          timeout 80m python my_script.py || echo "Script ended or timed out."
+              time.sleep(60)
+          PYCODE
 
-      - name: Upload result artifacts (optional)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: keepalive-logs
-          path: |
-            result.log
-            build_log.txt
+      - name: 🪄 Giữ tiến trình chạy 24/7 (auto-restart)
+        script: |
+          echo "🚀 Bắt đầu loop chạy nền"
+          while true; do
+            python3 $LOOP_FILE || echo "⚠️ Loop dừng — khởi động lại sau 5s"
+            sleep 5
+          done
