--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
   macos_vps_247:
     name: "macOS M4 VPS Loop Runner (auto-restart by hours)"
     max_build_duration: 120   # giới hạn Codemagic 2 giờ
-    instance_type: mac_mini_m4
+    instance_type: mac_pro
     environment:
       vars:
         LOOP_FILE: "loop.py"
